# HarmonyPal

./: .gitignore  .gitmodules  1_psalm_transcipted.mid  LICENSE  README.md  harmonyPal.py  harmonyPal.sh  howToUseMe.md  requirements.txt  requirements_to_clone.txt  sources.md
EMO_Harmonizer/: .gitignore  coco_jumbo.mid  emoitonesreq.txt  event_generator.sh  inference.py  requirements.txt
EMO_Harmonizer/.git.backup/: config  index  packed-refs
EMO_Harmonizer/.git.backup/objects/pack/: pack-c8caa7738685984c30555f84e9bd0b297fcd311f.idx  pack-c8caa7738685984c30555f84e9bd0b297fcd311f.pack  pack-c8caa7738685984c30555f84e9bd0b297fcd311f.rev
EMO_Harmonizer/.git.backup/refs/heads/: main
EMO_Harmonizer/emopia_events/data_splits/: train.pkl  valid.pkl
EMO_Harmonizer/emopia_events/lead_sheet_chord11_ablated/events/: Q1_coco_jumbo_1.pkl  Q2_coco_jumbo_1.pkl  Q3_1_psalm_3.pkl  Q3_coco_jumbo_3.pkl  Q4_1_psalm_1.pkl
EMO_Harmonizer/emopia_events/lead_sheet_chord11_functional/: dictionary.json
EMO_Harmonizer/midi_data/EMOPIA/: key_mode_tempo.csv
EMO_Harmonizer/midi_data/EMOPIA/split/: test_SL.csv  (+3 more)
EMO_Harmonizer/representations/: data_splits.py  events2words.py  midi2events_emopia.py
MidiToXml/: convert.py
autoharmonizer/: harmonizer.py
autoharmonizer/outputs/: 3+2 - Kombine.mxl  A. Hume, P. Livingstone - A Guid New Year.mxl  Aaron Zigman - The Notebook.mxl
tones2notes/: 2_allaluja_transcipted.mid  pyproject.toml  req_no_num.txt  requirements.txt
tones2notes/src/: transcribe.py  transcribe_and_play.py
tones2notes/utils/: post_process.py  processing.py
(+2630 files in other folders)
